--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+     
+    <h1>Etch-A-Sketch</h1>
     <div class="grid-container">
 
+    </div>
+
+    <div class="footer">
+        <p>Current size of the board: 16x16</p>
+        <div class="button">
+            <button class="resize">Resize</button>
+            <button class="rand">Random color</button>
+            <button class="reset">Reset</button>
+        </div>
     </div>
 
     <script src="index.js"></script>
